notarization/20-notary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notary
  namespace: clearing-house
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notary
  template:
    metadata:
      labels:
        app: notary
    spec:
      containers:
      - name: notary
        image: registry.gitlab.com/gaia-x/lab/compliance/gaia-x-notary-registrationnumber:${IMAGETAG_NOTARY}
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: notary-http
        volumeMounts:
          - name: shared-folder
            mountPath: /usr/src/app/static/.well-known
      volumes:
      - name: shared-folder
        emptyDir: {}        
      - name: notary-init
        configMap:
          name: notary-init
          items:
            - key: init.js
              path: init.js
      restartPolicy: Always
---
