notarization/30-notary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notary
  namespace: clearing-house
spec:
  selector:
    app: notary
  type: ClusterIP
  ports:
  - name: notary
    protocol: TCP
    port: 3000
    targetPort: 3000
---
